Style header & section 1 content

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
         <div class="sect01-left-hero ">
           <h1 class="hero-main">This website is awesome</h1>
-          <p>
+          <p class="hero-info">
             This website has some subtext that goes here under the main title. It's a smaller font 
             and the color is lower contrast
           </p>
           <button>Sign up</button>
         </div>
         <div class="sect01-right-hero">
-          <img href="" alt="">
+          <img src="./images/marble.jpg" alt="Smooth marble pattern" width="390px" height="190px">
         </div>
 
       </div>
