--- a/index.html
+++ b/index.html
@@ -28,38 +28,40 @@
       </div>   
       
       <div class="sect01">
-
-        <div class="sect01-left-hero ">
-          <h1 class="hero-main">This website is awesome</h1>
-          <p class="hero-info">
-            This website has some subtext that goes here under the main title. It's a smaller font 
-            and the color is lower contrast
-          </p>
-          <button>Sign up</button>
+        <div class="sect01-inner-wrapper">
+          <div class="sect01-left-hero ">
+            <h1 class="hero-main">This website is awesome</h1>
+            <p class="hero-info">
+              This website has some subtext that goes here under the main title. It's a smaller font 
+              and the color is lower contrast
+            </p>
+            <button>Sign up</button>
+          </div>
+          <div class="sect01-right-hero">
+            <img src="./images/marble.jpg" alt="Smooth marble pattern" width="390px" height="190px">
+          </div>
         </div>
-        <div class="sect01-right-hero">
-          <img src="./images/marble.jpg" alt="Smooth marble pattern" width="390px" height="190px">
-        </div>
+          
 
       </div>
 
       <div class="sect02">
         <div class="sect02-inner-wrapper">
 
-          <h2>Some Random Information</h2>
+          <h2 class="sect02-title">Some Random Information</h2>
 
           <div class="sect02-parent">
             <div class="sect02-child">
-              <img href="" alt="">
-              <p class="img-caption">this is some subtext under an illustration or image</p>
+              <img src="./images/marble.jpg" alt="">
+              <p class="sect02-caption">this is some subtext under an illustration or image</p>
             </div>
             <div class="sect02-child">
-              <img href="" alt="">
-              <p class="img-caption">this is some subtext under an illustration or image</p>
+              <img src="./images/marble.jpg" alt="">
+              <p class="sect02-caption">this is some subtext under an illustration or image</p>
             </div>
             <div class="sect02-child">
-              <img href="" alt="">
-              <p class="img-caption">this is some subtext under an illustration or image</p>
+              <img src="./images/marble.jpg" alt="">
+              <p class="sect02-caption">this is some subtext under an illustration or image</p>
             </div>
           </div>
         </div>
