--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button>Sign up</button>
           </div>
           <div class="sect01-right-hero">
-            <img src="./images/marble.jpg" alt="Smooth marble pattern" width="390px" height="190px">
+            <img class="hero-image" src="./images/marble.jpg" alt="Smooth marble pattern" width="390px" height="190px">
           </div>
         </div>
           
@@ -63,20 +63,25 @@
               <img src="./images/marble.jpg" alt="">
               <p class="sect02-caption">this is some subtext under an illustration or image</p>
             </div>
+            <div class="sect02-child">
+              <img src="./images/marble.jpg" alt="">
+              <p class="sect02-caption">this is some subtext under an illustration or image</p>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="sect03">
-        <div class="sect-three-parent">
-          <div class="sect03-1st-child">
-            <blockquote>This is an inspring quote, or a testimonial from a customer. Maybe it's just 
+        <div class="sect03-parent">
+          <div class="sect03-child01">
+            <blockquote>
+              This is an inspring quote, or a testimonial from a customer. Maybe it's just 
               filling up space, or may people will actually read it. Who knows? All I know is that it
               looks nice.
             </blockquote>
           </div>
-            <div class="sect03-2nd-child">
-              <figcaption>Thor, God of Thunder</figcaption>
+            <div class="sect03-child02">
+              <figcaption>&mdash; Thor, God of Thunder</figcaption>
             </div>
             
         </div>
