Style section 4 & tweak layout

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="sect03-parent">
           <div class="sect03-child01">
             <blockquote>
-              This is an inspring quote, or a testimonial from a customer. Maybe it's just 
-              filling up space, or may people will actually read it. Who knows? All I know is that it
+              This is an inspiring quote, or a testimonial from a customer. Maybe it's just 
+              filling up space, or maybe people will actually read it. Who knows? All I know is that it
               looks nice.
             </blockquote>
           </div>
@@ -88,12 +88,12 @@
       </div>
 
       <div class="sect04">
-        <div class="sect-four-content">
-          <div class="text">
+        <div class="sect04-parent">
+          <div class="cta">
             <h4>Call to action! It's time!</h4>
             <p>Sign up for our product by clicking that button right over there!</p>
           </div>
-          <button>Sign up</button>
+          <button class="cta-btn">Sign up</button>
         </div>
       </div>
     </div>   
