--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link rel="stylesheet" href="./styles/styles.css">
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
             <button>Sign up</button>
           </div>
           <div class="sect01-right-hero">
-            <img class="hero-image" src="./images/marble.jpg" alt="Smooth marble pattern" width="390px" height="190px">
+            <img class="hero-image" src="./images/marble.jpg" alt="Smooth marble pattern" width="390" height="190">
           </div>
         </div>
           
@@ -81,7 +81,7 @@
           </div>
 
             <div class="sect03-child02">
-              <figcaption>&mdash; Thor, God of Thunder</figcaption>
+              <p>&mdash; Thor, God of Thunder</p>
             </div>  
         </div>
       </div>
